<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartUpPage">

    <TextView
        android:id="@+id/start_up_page_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_up_page_name_text"
        android:textSize="@dimen/start_up_page_name_textSize"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/start_up_page_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_up_page_ip_text"
        android:textSize="@dimen/start_up_page_ip_textSize"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/start_up_page_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_up_page_port_text"
        android:textSize="@dimen/start_up_page_port_textSize"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/start_up_page_clientNameBlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/start_up_page_clientNameBlock_hint"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/start_up_page_serverIpBlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/start_up_page_serverIpBlock_hint"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/start_up_page_serverPortBlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/start_up_page_serverPortBlock_hint"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/start_up_page_connectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_up_page_connectButton_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>